fix: update product service